next version of web file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Hello AngularJS</title>
   </head>
   <body>
-         <h1>Learning AngularJS from </h1>
+         <h1>Learning AngularJS from</h1>
+         <p>Seminars are happing at this point of time.</p>
   </body>
 </html>
